@@ -1,6 +1,5 @@
 package io.github.noeppi_noeppi.mods.minemention;
 
-import com.google.common.collect.ImmutableMap;
 import io.github.noeppi_noeppi.libx.annotation.config.RegisterConfig;
 import io.github.noeppi_noeppi.libx.config.Config;
 import net.minecraft.resources.ResourceLocation;
@@ -16,5 +15,5 @@ public class MineMentionConfig {
             "To remove a mention key that is used because it's a default, set it to minemention:none",
             "A redirection of the `everyone` mention is not possible and will be ignored."
     })
-    public static Map<String, ResourceLocation> mentions = ImmutableMap.of();
+    public static Map<String, ResourceLocation> mentions = Map.of();
 }
